- 
    Bug 
- 
    Resolution: Fixed
- 
    P1: Critical 
- 
    6.5.3
- 
        
- 
        614e0f1da (dev), 19471b215 (6.6), 581eecd59 (6.5)
A minimal reproducer:
Have the following code as "SubWindow"
import QtQuick Window { width: 400 height: 300 title: "Secondary window" }
Then instantiate it in Main.qml:
import QtQuick import QtQuick.Controls ApplicationWindow { id: window width: 600 height: 400 visible: true Button { text: "Open secondary window" onClicked: secondary_window.show() } SubWindow{ id: secondary_window } }
Run application and click button, a second Window pops up. 
In Qt 6.5.2: Geometry of the second Window is independent from the main Window. Moving/resizing the main Window does not influence the second Window by any means.
In Qt 6.5.3: Moving/resizing the main Window weirdly resizes the second Window. The behavior is totally unexpected and may cause crash in certain circumstances (reportedly QWindowsWindow::savedDpi). 
- blocks
- 
                    QTBUG-119319 Resizing or moving main window causes any non modal dialogs that are open to shrink -         
- Closed
 
-         
- is duplicated by
- 
                    QTBUG-119374 Error with child window -           
- Closed
 
-         
- 
                    QTCREATORBUG-30172 Log window get moved and resized when moving qt creator window -           
- Closed
 
-         
- relates to
- 
                    QTBUG-106483 Moving a window to another screen (different DPI) using keyboard shortcuts while a menu is open has unexpected behavior -         
- Open
 
-         
| For Gerrit Dashboard: QTBUG-117779 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 510660,3 | Revert "Windows QPA: Move transient children with a window move" | dev | qt/qtbase | Status: MERGED | +2 | 0 | 
| 510696,2 | Revert "Windows QPA: Move transient children with a window move" | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 | 
| 512439,2 | Revert "Windows QPA: Move transient children with a window move" | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |