fix: Workaround for QTBUG-117779 (problems with windows order under Ubuntu and dailogs moving with main window under Windows) - using parentless dialogs