gui/mainwindow.cpp
@@ -195,8 +195,9 @@ MainWindow::MainWindow(const QString &iniFilename, QWidget *parent)
     ui->setupUi(this);
 
     // creating log windows as soon as possible
-    m_logDialog = new LogDialog(this);
+    m_logDialog = new LogDialog();
     setLogToModel(m_logDialog->getModel());
+    connect(this, &MainWindow::exit, [this]() {m_logDialog->close(); m_logDialog->deleteLater(); });  // QTBUG-117779 ==> using parentless dialogs as workaround
 
     ui->serviceListView->setIconSize(QSize(16,16));
 
@@ -224,9 +225,10 @@ MainWindow::MainWindow(const QString &iniFilename, QWidget *parent)
 
     m_inputDeviceRecorder = new InputDeviceRecorder();
 
-    m_setupDialog = new SetupDialog(this);
+    m_setupDialog = new SetupDialog();
     m_setupDialog->setSlsDumpPaternDefault(slsDumpPatern);
     m_setupDialog->setSpiDumpPaternDefault(spiDumpPatern);
+    connect(this, &MainWindow::exit, [this]() {m_setupDialog->close(); m_setupDialog->deleteLater(); });  // QTBUG-117779 ==> using parentless dialogs as workaround
     connect(m_setupDialog, &SetupDialog::inputDeviceChanged, this, &MainWindow::changeInputDevice);
     connect(m_setupDialog, &SetupDialog::newInputDeviceSettings, this, &MainWindow::onNewInputDeviceSettings);
     connect(m_setupDialog, &SetupDialog::applicationStyleChanged, this, &MainWindow::onApplicationStyleChanged);
@@ -234,7 +236,8 @@ MainWindow::MainWindow(const QString &iniFilename, QWidget *parent)
     connect(m_setupDialog, &SetupDialog::newAnnouncementSettings, this, &MainWindow::onNewAnnouncementSettings);
     connect(m_setupDialog, &SetupDialog::xmlHeaderToggled, m_inputDeviceRecorder, &InputDeviceRecorder::setXmlHeaderEnabled);
 
-    m_ensembleInfoDialog = new EnsembleInfoDialog(this);
+    m_ensembleInfoDialog = new EnsembleInfoDialog();
+    connect(this, &MainWindow::exit, [this]() {m_ensembleInfoDialog->close(); m_ensembleInfoDialog->deleteLater(); });  // QTBUG-117779 ==> using parentless dialogs as workaround
     connect(m_ensembleInfoDialog, &EnsembleInfoDialog::recordingStart, m_inputDeviceRecorder, &InputDeviceRecorder::start);
     connect(m_ensembleInfoDialog, &EnsembleInfoDialog::recordingStop, m_inputDeviceRecorder, &InputDeviceRecorder::stop);
     connect(m_inputDeviceRecorder, &InputDeviceRecorder::recording, m_ensembleInfoDialog, &EnsembleInfoDialog::onRecording);       
@@ -473,7 +476,9 @@ MainWindow::MainWindow(const QString &iniFilename, QWidget *parent)
     connect(m_serviceList, &ServiceList::empty, m_slTreeModel, &SLTreeModel::clear);
 
     // EPG dialog
-    m_epgDialog = new EPGDialog(m_slModel, ui->serviceListView->selectionModel(), m_metadataManager, this);
+    m_epgDialog = new EPGDialog(m_slModel, ui->serviceListView->selectionModel(), m_metadataManager);
+    connect(this, &MainWindow::exit, [this]() {m_epgDialog->close(); m_epgDialog->deleteLater(); });  // QTBUG-117779 ==> using parentless dialogs as workaround
+    connect(m_epgDialog, &QObject::destroyed, this, [this]() { m_epgDialog = nullptr; } );
     connect(m_metadataManager, &MetadataManager::epgAvailable, this, [this](){ m_epgAction->setEnabled(true); } );
     connect(m_metadataManager, &MetadataManager::epgEmpty, this, &MainWindow::onEpgEmpty);
     connect(m_epgDialog, &EPGDialog::scheduleAudioRecording, this, [this](const AudioRecScheduleItem & item) {
@@ -747,7 +752,8 @@ MainWindow::MainWindow(const QString &iniFilename, QWidget *parent)
     connect(m_setupDialog, &SetupDialog::uaDumpSettings, m_slideShowApp[Instance::Service], &SlideShowApp::setDataDumping, Qt::QueuedConnection);
     connect(m_setupDialog, &SetupDialog::uaDumpSettings, m_slideShowApp[Instance::Announcement], &SlideShowApp::setDataDumping, Qt::QueuedConnection);
 
-    m_catSlsDialog = new CatSLSDialog(this);
+    m_catSlsDialog = new CatSLSDialog();
+    connect(this, &MainWindow::exit, [this]() {m_catSlsDialog->close(); m_catSlsDialog->deleteLater(); });  // QTBUG-117779 ==> using parentless dialogs as workaround
     connect(m_slideShowApp[Instance::Service], &SlideShowApp::categoryUpdate, m_catSlsDialog, &CatSLSDialog::onCategoryUpdate, Qt::QueuedConnection);
     connect(m_slideShowApp[Instance::Service], &SlideShowApp::catSlide, m_catSlsDialog, &CatSLSDialog::onCatSlide, Qt::QueuedConnection);
     connect(m_slideShowApp[Instance::Service], &SlideShowApp::resetTerminal, m_catSlsDialog, &CatSLSDialog::reset, Qt::QueuedConnection);
@@ -779,10 +785,9 @@ MainWindow::MainWindow(const QString &iniFilename, QWidget *parent)
     connect(m_radioControl, &RadioControl::audioServiceSelection, m_spiApp, &UserApplication::setAudioServiceId);
 
     // TII dialog
-    m_tiiDialog = new TIIDialog(m_setupDialog->settings(), this);
+    m_tiiDialog = new TIIDialog(m_setupDialog->settings());
     m_tiiDialog->setupDarkMode(isDarkMode());
-    // connect(m_tiiDialog, &QDialog::finished, m_tiiDialog, &QObject::deleteLater);
-    // connect(m_tiiDialog, &QDialog::destroyed, this, [this]() { m_tiiDialog = nullptr; } );
+    connect(this, &MainWindow::exit, [this]() {m_tiiDialog->close(); m_tiiDialog->deleteLater(); });  // QTBUG-117779 ==> using parentless dialogs as workaround
     connect(m_setupDialog, &SetupDialog::tiiSettingsChanged, m_tiiDialog, &TIIDialog::onSettingsChanged);
     connect(m_tiiDialog, &TIIDialog::setTii, m_radioControl, &RadioControl::setTii, Qt::QueuedConnection);
     connect(m_radioControl, &RadioControl::tiiData, m_tiiDialog, &TIIDialog::onTiiData, Qt::QueuedConnection);
@@ -2053,7 +2058,10 @@ void MainWindow::onMetadataUpdated(const ServiceListId & id, MetadataManager::Me
 
 void MainWindow::onEpgEmpty()
 {
-    m_epgDialog->close();
+    if (m_epgDialog)
+    {
+        m_epgDialog->close();
+    }
     m_epgAction->setEnabled(false);
 }
 
@@ -3106,7 +3114,8 @@ void MainWindow::showAudioRecordingSchedule()
 {
     if (m_audioRecScheduleDialog == nullptr)
     {
-        m_audioRecScheduleDialog = new AudioRecScheduleDialog(m_audioRecScheduleModel, m_slModel, this);
+        m_audioRecScheduleDialog = new AudioRecScheduleDialog(m_audioRecScheduleModel, m_slModel);
+        connect(this, &MainWindow::exit, m_audioRecScheduleDialog, &AudioRecScheduleDialog::close);  // QTBUG-117779 ==> using parentless dialogs as workaround
         connect(m_audioRecScheduleDialog, &QDialog::finished, m_audioRecScheduleDialog, &QObject::deleteLater);
         connect(m_audioRecScheduleDialog, &QDialog::destroyed, this, [this]() { m_audioRecScheduleDialog = nullptr; } );
         m_audioRecScheduleDialog->setLocale(m_timeLocale);
@@ -3127,6 +3136,7 @@ void MainWindow::showSnrPlotDialog()
     {
         m_snrPlotDialog = new SNRPlotDialog(this);
         m_snrPlotDialog->setupDarkMode(isDarkMode());
+        connect(this, &MainWindow::exit, m_snrPlotDialog, &SNRPlotDialog::close);  // QTBUG-117779 ==> using parentless dialogs as workaround
         connect(m_snrPlotDialog, &QDialog::finished, m_snrPlotDialog, &QObject::deleteLater);
         connect(m_snrPlotDialog, &QDialog::destroyed, this, [this]() { m_snrPlotDialog = nullptr; } );        
     }
